syntax.output
Terminals unused in grammar

    "char"
    "endif"
    "default"
    "endswitch"
    "string"
    "["
    "]"


Grammar

    0 $accept: program "EOF"

    1 program: "program start" "id" function_declaration program_body
    2        | "program start" "id" program_body

    3 program_body: "start main" variable_declaration stmt "end main"
    4             | "start main" stmt "end main"
    5             | "start main" "end main"

    6 stmt: assign_stmt
    7     | while_stmt
    8     | for_stmt
    9     | if_stmt
   10     | switch_stmt
   11     | break_stmt
   12     | print_stmt

   13 assign_stmt: "id" "=" "num"
   14            | "id" "=" "id"
   15            | "id" "=" expression

   16 while_stmt: "while" expression "end while"

   17 for_stmt: "for" "id" ":" "=" "num" "to" "num" "step" "num" expression "endfor"

   18 if_stmt: "if" "(" expression ")" "then" stmt if_tail

   19 if_tail: "elseif" stmt
   20        | "else" stmt
   21        | %empty

   22 switch_stmt: "switch" "(" expression ")" switch_tail

   23 switch_tail: "case" "(" expression ")" stmt
   24            | %empty

   25 break_stmt: "break" ";"

   26 print_stmt: "(" "strings" "," "id" ")" ";"
   27           | "(" "strings" ")" ";"

   28 function_declaration: "function" "id" "(" parameter_list ")" function_body "return" "digit" "end function"

   29 function_body: variable_declaration
   30              | %empty

   31 variable_declaration: "variables" data_type identifier_list ";"

   32 identifier_list: "id"
   33                | identifier_list "," "id"

   34 parameter_list: number
   35               | parameter_list "," number
   36               | number "=" number

   37 expression: data_type "id"
   38           | expression "=" number
   39           | expression "," "id"
   40           | expression "=" "{" parameter_list "}"
   41           | expression "||" expression
   42           | expression "&&" expression
   43           | expression "== or !=" expression
   44           | expression "> or < or >= or <=" expression
   45           | expression "+ or -" expression
   46           | expression "* or / or ^" expression

   47 number: "digit"
   48       | "character"

   49 data_type: "integer"
   50          | "id"


Terminals, with rules where they appear

    "EOF" (0) 0
    error (256)
    "program start" <strval> (258) 1 2
    "function" <strval> (259) 28
    "variables" <strval> (260) 31
    "char" <strval> (261)
    "integer" <strval> (262) 49
    "end function" <strval> (263) 28
    "return" <strval> (264) 28
    "start main" <strval> (265) 3 4 5
    "end main" <strval> (266) 3 4 5
    "while" <strval> (267) 16
    "end while" <strval> (268) 16
    "for" <strval> (269) 17
    "to" <strval> (270) 17
    "step" <strval> (271) 17
    "endfor" <strval> (272) 17
    "if" <strval> (273) 18
    "then" <strval> (274) 18
    "elseif" <strval> (275) 19
    "else" <strval> (276) 20
    "endif" <strval> (277)
    "switch" <strval> (278) 22
    "case" <strval> (279) 23
    "default" <strval> (280)
    "endswitch" <strval> (281)
    "break" <strval> (282) 25
    "||" <strval> (283) 41
    "&&" <strval> (284) 42
    "== or !=" <strval> (285) 43
    "> or < or >= or <=" <strval> (286) 44
    "+ or -" <strval> (287) 45
    "* or / or ^" <strval> (288) 46
    "id" <strval> (289) 1 2 13 14 15 17 26 28 32 33 37 39 50
    "digit" <strval> (290) 28 47
    "num" <strval> (291) 13 17
    "string" <strval> (292)
    "character" <strval> (293) 48
    "strings" <strval> (294) 26 27
    "(" <strval> (295) 18 22 23 26 27 28
    ")" <strval> (296) 18 22 23 26 27 28
    ";" <strval> (297) 25 26 27 31
    "," <strval> (298) 26 33 35 39
    "=" <strval> (299) 13 14 15 17 36 38 40
    "[" <strval> (300)
    "]" <strval> (301)
    "{" <strval> (302) 40
    "}" <strval> (303) 40
    ":" <strval> (304) 17
    LOWER_THAN_ELSE (305)


Nonterminals, with rules where they appear

    $accept (51)
        on left: 0
    program <strval> (52)
        on left: 1 2
        on right: 0
    program_body <strval> (53)
        on left: 3 4 5
        on right: 1 2
    stmt <strval> (54)
        on left: 6 7 8 9 10 11 12
        on right: 3 4 18 19 20 23
    assign_stmt <strval> (55)
        on left: 13 14 15
        on right: 6
    while_stmt <strval> (56)
        on left: 16
        on right: 7
    for_stmt <strval> (57)
        on left: 17
        on right: 8
    if_stmt <strval> (58)
        on left: 18
        on right: 9
    if_tail <strval> (59)
        on left: 19 20 21
        on right: 18
    switch_stmt <strval> (60)
        on left: 22
        on right: 10
    switch_tail <strval> (61)
        on left: 23 24
        on right: 22
    break_stmt <strval> (62)
        on left: 25
        on right: 11
    print_stmt <strval> (63)
        on left: 26 27
        on right: 12
    function_declaration <strval> (64)
        on left: 28
        on right: 1
    function_body <strval> (65)
        on left: 29 30
        on right: 28
    variable_declaration <strval> (66)
        on left: 31
        on right: 3 29
    identifier_list <strval> (67)
        on left: 32 33
        on right: 31 33
    parameter_list <strval> (68)
        on left: 34 35 36
        on right: 28 35 40
    expression <strval> (69)
        on left: 37 38 39 40 41 42 43 44 45 46
        on right: 15 16 17 18 22 23 38 39 40 41 42 43 44 45 46
    number <strval> (70)
        on left: 47 48
        on right: 34 35 36 38
    data_type <strval> (71)
        on left: 49 50
        on right: 31 37


State 0

    0 $accept: . program "EOF"

    "program start"  shift, and go to state 1

    program  go to state 2


State 1

    1 program: "program start" . "id" function_declaration program_body
    2        | "program start" . "id" program_body

    "id"  shift, and go to state 3


State 2

    0 $accept: program . "EOF"

    "EOF"  shift, and go to state 4


State 3

    1 program: "program start" "id" . function_declaration program_body
    2        | "program start" "id" . program_body

    "function"    shift, and go to state 5
    "start main"  shift, and go to state 6

    program_body          go to state 7
    function_declaration  go to state 8


State 4

    0 $accept: program "EOF" .

    $default  accept


State 5

   28 function_declaration: "function" . "id" "(" parameter_list ")" function_body "return" "digit" "end function"

    "id"  shift, and go to state 9


State 6

    3 program_body: "start main" . variable_declaration stmt "end main"
    4             | "start main" . stmt "end main"
    5             | "start main" . "end main"

    "variables"  shift, and go to state 10
    "end main"   shift, and go to state 11
    "while"      shift, and go to state 12
    "for"        shift, and go to state 13
    "if"         shift, and go to state 14
    "switch"     shift, and go to state 15
    "break"      shift, and go to state 16
    "id"         shift, and go to state 17
    "("          shift, and go to state 18

    stmt                  go to state 19
    assign_stmt           go to state 20
    while_stmt            go to state 21
    for_stmt              go to state 22
    if_stmt               go to state 23
    switch_stmt           go to state 24
    break_stmt            go to state 25
    print_stmt            go to state 26
    variable_declaration  go to state 27


State 7

    2 program: "program start" "id" program_body .

    $default  reduce using rule 2 (program)


State 8

    1 program: "program start" "id" function_declaration . program_body

    "start main"  shift, and go to state 6

    program_body  go to state 28


State 9

   28 function_declaration: "function" "id" . "(" parameter_list ")" function_body "return" "digit" "end function"

    "("  shift, and go to state 29


State 10

   31 variable_declaration: "variables" . data_type identifier_list ";"

    "integer"  shift, and go to state 30
    "id"       shift, and go to state 31

    data_type  go to state 32


State 11

    5 program_body: "start main" "end main" .

    $default  reduce using rule 5 (program_body)


State 12

   16 while_stmt: "while" . expression "end while"

    "integer"  shift, and go to state 30
    "id"       shift, and go to state 31

    expression  go to state 33
    data_type   go to state 34


State 13

   17 for_stmt: "for" . "id" ":" "=" "num" "to" "num" "step" "num" expression "endfor"

    "id"  shift, and go to state 35


State 14

   18 if_stmt: "if" . "(" expression ")" "then" stmt if_tail

    "("  shift, and go to state 36


State 15

   22 switch_stmt: "switch" . "(" expression ")" switch_tail

    "("  shift, and go to state 37


State 16

   25 break_stmt: "break" . ";"

    ";"  shift, and go to state 38


State 17

   13 assign_stmt: "id" . "=" "num"
   14            | "id" . "=" "id"
   15            | "id" . "=" expression

    "="  shift, and go to state 39


State 18

   26 print_stmt: "(" . "strings" "," "id" ")" ";"
   27           | "(" . "strings" ")" ";"

    "strings"  shift, and go to state 40


State 19

    4 program_body: "start main" stmt . "end main"

    "end main"  shift, and go to state 41


State 20

    6 stmt: assign_stmt .

    $default  reduce using rule 6 (stmt)


State 21

    7 stmt: while_stmt .

    $default  reduce using rule 7 (stmt)


State 22

    8 stmt: for_stmt .

    $default  reduce using rule 8 (stmt)


State 23

    9 stmt: if_stmt .

    $default  reduce using rule 9 (stmt)


State 24

   10 stmt: switch_stmt .

    $default  reduce using rule 10 (stmt)


State 25

   11 stmt: break_stmt .

    $default  reduce using rule 11 (stmt)


State 26

   12 stmt: print_stmt .

    $default  reduce using rule 12 (stmt)


State 27

    3 program_body: "start main" variable_declaration . stmt "end main"

    "while"   shift, and go to state 12
    "for"     shift, and go to state 13
    "if"      shift, and go to state 14
    "switch"  shift, and go to state 15
    "break"   shift, and go to state 16
    "id"      shift, and go to state 17
    "("       shift, and go to state 18

    stmt         go to state 42
    assign_stmt  go to state 20
    while_stmt   go to state 21
    for_stmt     go to state 22
    if_stmt      go to state 23
    switch_stmt  go to state 24
    break_stmt   go to state 25
    print_stmt   go to state 26


State 28

    1 program: "program start" "id" function_declaration program_body .

    $default  reduce using rule 1 (program)


State 29

   28 function_declaration: "function" "id" "(" . parameter_list ")" function_body "return" "digit" "end function"

    "digit"      shift, and go to state 43
    "character"  shift, and go to state 44

    parameter_list  go to state 45
    number          go to state 46


State 30

   49 data_type: "integer" .

    $default  reduce using rule 49 (data_type)


State 31

   50 data_type: "id" .

    $default  reduce using rule 50 (data_type)


State 32

   31 variable_declaration: "variables" data_type . identifier_list ";"

    "id"  shift, and go to state 47

    identifier_list  go to state 48


State 33

   16 while_stmt: "while" expression . "end while"
   38 expression: expression . "=" number
   39           | expression . "," "id"
   40           | expression . "=" "{" parameter_list "}"
   41           | expression . "||" expression
   42           | expression . "&&" expression
   43           | expression . "== or !=" expression
   44           | expression . "> or < or >= or <=" expression
   45           | expression . "+ or -" expression
   46           | expression . "* or / or ^" expression

    "end while"           shift, and go to state 49
    "||"                  shift, and go to state 50
    "&&"                  shift, and go to state 51
    "== or !="            shift, and go to state 52
    "> or < or >= or <="  shift, and go to state 53
    "+ or -"              shift, and go to state 54
    "* or / or ^"         shift, and go to state 55
    ","                   shift, and go to state 56
    "="                   shift, and go to state 57


State 34

   37 expression: data_type . "id"

    "id"  shift, and go to state 58


State 35

   17 for_stmt: "for" "id" . ":" "=" "num" "to" "num" "step" "num" expression "endfor"

    ":"  shift, and go to state 59


State 36

   18 if_stmt: "if" "(" . expression ")" "then" stmt if_tail

    "integer"  shift, and go to state 30
    "id"       shift, and go to state 31

    expression  go to state 60
    data_type   go to state 34


State 37

   22 switch_stmt: "switch" "(" . expression ")" switch_tail

    "integer"  shift, and go to state 30
    "id"       shift, and go to state 31

    expression  go to state 61
    data_type   go to state 34


State 38

   25 break_stmt: "break" ";" .

    $default  reduce using rule 25 (break_stmt)


State 39

   13 assign_stmt: "id" "=" . "num"
   14            | "id" "=" . "id"
   15            | "id" "=" . expression

    "integer"  shift, and go to state 30
    "id"       shift, and go to state 62
    "num"      shift, and go to state 63

    expression  go to state 64
    data_type   go to state 34


State 40

   26 print_stmt: "(" "strings" . "," "id" ")" ";"
   27           | "(" "strings" . ")" ";"

    ")"  shift, and go to state 65
    ","  shift, and go to state 66


State 41

    4 program_body: "start main" stmt "end main" .

    $default  reduce using rule 4 (program_body)


State 42

    3 program_body: "start main" variable_declaration stmt . "end main"

    "end main"  shift, and go to state 67


State 43

   47 number: "digit" .

    $default  reduce using rule 47 (number)


State 44

   48 number: "character" .

    $default  reduce using rule 48 (number)


State 45

   28 function_declaration: "function" "id" "(" parameter_list . ")" function_body "return" "digit" "end function"
   35 parameter_list: parameter_list . "," number

    ")"  shift, and go to state 68
    ","  shift, and go to state 69


State 46

   34 parameter_list: number .
   36               | number . "=" number

    "="  shift, and go to state 70

    $default  reduce using rule 34 (parameter_list)


State 47

   32 identifier_list: "id" .

    $default  reduce using rule 32 (identifier_list)


State 48

   31 variable_declaration: "variables" data_type identifier_list . ";"
   33 identifier_list: identifier_list . "," "id"

    ";"  shift, and go to state 71
    ","  shift, and go to state 72


State 49

   16 while_stmt: "while" expression "end while" .

    $default  reduce using rule 16 (while_stmt)


State 50

   41 expression: expression "||" . expression

    "integer"  shift, and go to state 30
    "id"       shift, and go to state 31

    expression  go to state 73
    data_type   go to state 34


State 51

   42 expression: expression "&&" . expression

    "integer"  shift, and go to state 30
    "id"       shift, and go to state 31

    expression  go to state 74
    data_type   go to state 34


State 52

   43 expression: expression "== or !=" . expression

    "integer"  shift, and go to state 30
    "id"       shift, and go to state 31

    expression  go to state 75
    data_type   go to state 34


State 53

   44 expression: expression "> or < or >= or <=" . expression

    "integer"  shift, and go to state 30
    "id"       shift, and go to state 31

    expression  go to state 76
    data_type   go to state 34


State 54

   45 expression: expression "+ or -" . expression

    "integer"  shift, and go to state 30
    "id"       shift, and go to state 31

    expression  go to state 77
    data_type   go to state 34


State 55

   46 expression: expression "* or / or ^" . expression

    "integer"  shift, and go to state 30
    "id"       shift, and go to state 31

    expression  go to state 78
    data_type   go to state 34


State 56

   39 expression: expression "," . "id"

    "id"  shift, and go to state 79


State 57

   38 expression: expression "=" . number
   40           | expression "=" . "{" parameter_list "}"

    "digit"      shift, and go to state 43
    "character"  shift, and go to state 44
    "{"          shift, and go to state 80

    number  go to state 81


State 58

   37 expression: data_type "id" .

    $default  reduce using rule 37 (expression)


State 59

   17 for_stmt: "for" "id" ":" . "=" "num" "to" "num" "step" "num" expression "endfor"

    "="  shift, and go to state 82


State 60

   18 if_stmt: "if" "(" expression . ")" "then" stmt if_tail
   38 expression: expression . "=" number
   39           | expression . "," "id"
   40           | expression . "=" "{" parameter_list "}"
   41           | expression . "||" expression
   42           | expression . "&&" expression
   43           | expression . "== or !=" expression
   44           | expression . "> or < or >= or <=" expression
   45           | expression . "+ or -" expression
   46           | expression . "* or / or ^" expression

    "||"                  shift, and go to state 50
    "&&"                  shift, and go to state 51
    "== or !="            shift, and go to state 52
    "> or < or >= or <="  shift, and go to state 53
    "+ or -"              shift, and go to state 54
    "* or / or ^"         shift, and go to state 55
    ")"                   shift, and go to state 83
    ","                   shift, and go to state 56
    "="                   shift, and go to state 57


State 61

   22 switch_stmt: "switch" "(" expression . ")" switch_tail
   38 expression: expression . "=" number
   39           | expression . "," "id"
   40           | expression . "=" "{" parameter_list "}"
   41           | expression . "||" expression
   42           | expression . "&&" expression
   43           | expression . "== or !=" expression
   44           | expression . "> or < or >= or <=" expression
   45           | expression . "+ or -" expression
   46           | expression . "* or / or ^" expression

    "||"                  shift, and go to state 50
    "&&"                  shift, and go to state 51
    "== or !="            shift, and go to state 52
    "> or < or >= or <="  shift, and go to state 53
    "+ or -"              shift, and go to state 54
    "* or / or ^"         shift, and go to state 55
    ")"                   shift, and go to state 84
    ","                   shift, and go to state 56
    "="                   shift, and go to state 57


State 62

   14 assign_stmt: "id" "=" "id" .
   50 data_type: "id" .

    "id"      reduce using rule 50 (data_type)
    $default  reduce using rule 14 (assign_stmt)


State 63

   13 assign_stmt: "id" "=" "num" .

    $default  reduce using rule 13 (assign_stmt)


State 64

   15 assign_stmt: "id" "=" expression .
   38 expression: expression . "=" number
   39           | expression . "," "id"
   40           | expression . "=" "{" parameter_list "}"
   41           | expression . "||" expression
   42           | expression . "&&" expression
   43           | expression . "== or !=" expression
   44           | expression . "> or < or >= or <=" expression
   45           | expression . "+ or -" expression
   46           | expression . "* or / or ^" expression

    "||"                  shift, and go to state 50
    "&&"                  shift, and go to state 51
    "== or !="            shift, and go to state 52
    "> or < or >= or <="  shift, and go to state 53
    "+ or -"              shift, and go to state 54
    "* or / or ^"         shift, and go to state 55
    ","                   shift, and go to state 56
    "="                   shift, and go to state 57

    $default  reduce using rule 15 (assign_stmt)


State 65

   27 print_stmt: "(" "strings" ")" . ";"

    ";"  shift, and go to state 85


State 66

   26 print_stmt: "(" "strings" "," . "id" ")" ";"

    "id"  shift, and go to state 86


State 67

    3 program_body: "start main" variable_declaration stmt "end main" .

    $default  reduce using rule 3 (program_body)


State 68

   28 function_declaration: "function" "id" "(" parameter_list ")" . function_body "return" "digit" "end function"

    "variables"  shift, and go to state 10

    $default  reduce using rule 30 (function_body)

    function_body         go to state 87
    variable_declaration  go to state 88


State 69

   35 parameter_list: parameter_list "," . number

    "digit"      shift, and go to state 43
    "character"  shift, and go to state 44

    number  go to state 89


State 70

   36 parameter_list: number "=" . number

    "digit"      shift, and go to state 43
    "character"  shift, and go to state 44

    number  go to state 90


State 71

   31 variable_declaration: "variables" data_type identifier_list ";" .

    $default  reduce using rule 31 (variable_declaration)


State 72

   33 identifier_list: identifier_list "," . "id"

    "id"  shift, and go to state 91


State 73

   38 expression: expression . "=" number
   39           | expression . "," "id"
   40           | expression . "=" "{" parameter_list "}"
   41           | expression . "||" expression
   41           | expression "||" expression .
   42           | expression . "&&" expression
   43           | expression . "== or !=" expression
   44           | expression . "> or < or >= or <=" expression
   45           | expression . "+ or -" expression
   46           | expression . "* or / or ^" expression

    "&&"                  shift, and go to state 51
    "== or !="            shift, and go to state 52
    "> or < or >= or <="  shift, and go to state 53
    "+ or -"              shift, and go to state 54
    "* or / or ^"         shift, and go to state 55

    $default  reduce using rule 41 (expression)


State 74

   38 expression: expression . "=" number
   39           | expression . "," "id"
   40           | expression . "=" "{" parameter_list "}"
   41           | expression . "||" expression
   42           | expression . "&&" expression
   42           | expression "&&" expression .
   43           | expression . "== or !=" expression
   44           | expression . "> or < or >= or <=" expression
   45           | expression . "+ or -" expression
   46           | expression . "* or / or ^" expression

    "== or !="            shift, and go to state 52
    "> or < or >= or <="  shift, and go to state 53
    "+ or -"              shift, and go to state 54
    "* or / or ^"         shift, and go to state 55

    $default  reduce using rule 42 (expression)


State 75

   38 expression: expression . "=" number
   39           | expression . "," "id"
   40           | expression . "=" "{" parameter_list "}"
   41           | expression . "||" expression
   42           | expression . "&&" expression
   43           | expression . "== or !=" expression
   43           | expression "== or !=" expression .
   44           | expression . "> or < or >= or <=" expression
   45           | expression . "+ or -" expression
   46           | expression . "* or / or ^" expression

    "> or < or >= or <="  shift, and go to state 53
    "+ or -"              shift, and go to state 54
    "* or / or ^"         shift, and go to state 55

    $default  reduce using rule 43 (expression)


State 76

   38 expression: expression . "=" number
   39           | expression . "," "id"
   40           | expression . "=" "{" parameter_list "}"
   41           | expression . "||" expression
   42           | expression . "&&" expression
   43           | expression . "== or !=" expression
   44           | expression . "> or < or >= or <=" expression
   44           | expression "> or < or >= or <=" expression .
   45           | expression . "+ or -" expression
   46           | expression . "* or / or ^" expression

    "+ or -"       shift, and go to state 54
    "* or / or ^"  shift, and go to state 55

    $default  reduce using rule 44 (expression)


State 77

   38 expression: expression . "=" number
   39           | expression . "," "id"
   40           | expression . "=" "{" parameter_list "}"
   41           | expression . "||" expression
   42           | expression . "&&" expression
   43           | expression . "== or !=" expression
   44           | expression . "> or < or >= or <=" expression
   45           | expression . "+ or -" expression
   45           | expression "+ or -" expression .
   46           | expression . "* or / or ^" expression

    "* or / or ^"  shift, and go to state 55

    $default  reduce using rule 45 (expression)


State 78

   38 expression: expression . "=" number
   39           | expression . "," "id"
   40           | expression . "=" "{" parameter_list "}"
   41           | expression . "||" expression
   42           | expression . "&&" expression
   43           | expression . "== or !=" expression
   44           | expression . "> or < or >= or <=" expression
   45           | expression . "+ or -" expression
   46           | expression . "* or / or ^" expression
   46           | expression "* or / or ^" expression .

    $default  reduce using rule 46 (expression)


State 79

   39 expression: expression "," "id" .

    $default  reduce using rule 39 (expression)


State 80

   40 expression: expression "=" "{" . parameter_list "}"

    "digit"      shift, and go to state 43
    "character"  shift, and go to state 44

    parameter_list  go to state 92
    number          go to state 46


State 81

   38 expression: expression "=" number .

    $default  reduce using rule 38 (expression)


State 82

   17 for_stmt: "for" "id" ":" "=" . "num" "to" "num" "step" "num" expression "endfor"

    "num"  shift, and go to state 93


State 83

   18 if_stmt: "if" "(" expression ")" . "then" stmt if_tail

    "then"  shift, and go to state 94


State 84

   22 switch_stmt: "switch" "(" expression ")" . switch_tail

    "case"  shift, and go to state 95

    $default  reduce using rule 24 (switch_tail)

    switch_tail  go to state 96


State 85

   27 print_stmt: "(" "strings" ")" ";" .

    $default  reduce using rule 27 (print_stmt)


State 86

   26 print_stmt: "(" "strings" "," "id" . ")" ";"

    ")"  shift, and go to state 97


State 87

   28 function_declaration: "function" "id" "(" parameter_list ")" function_body . "return" "digit" "end function"

    "return"  shift, and go to state 98


State 88

   29 function_body: variable_declaration .

    $default  reduce using rule 29 (function_body)


State 89

   35 parameter_list: parameter_list "," number .

    $default  reduce using rule 35 (parameter_list)


State 90

   36 parameter_list: number "=" number .

    $default  reduce using rule 36 (parameter_list)


State 91

   33 identifier_list: identifier_list "," "id" .

    $default  reduce using rule 33 (identifier_list)


State 92

   35 parameter_list: parameter_list . "," number
   40 expression: expression "=" "{" parameter_list . "}"

    ","  shift, and go to state 69
    "}"  shift, and go to state 99


State 93

   17 for_stmt: "for" "id" ":" "=" "num" . "to" "num" "step" "num" expression "endfor"

    "to"  shift, and go to state 100


State 94

   18 if_stmt: "if" "(" expression ")" "then" . stmt if_tail

    "while"   shift, and go to state 12
    "for"     shift, and go to state 13
    "if"      shift, and go to state 14
    "switch"  shift, and go to state 15
    "break"   shift, and go to state 16
    "id"      shift, and go to state 17
    "("       shift, and go to state 18

    stmt         go to state 101
    assign_stmt  go to state 20
    while_stmt   go to state 21
    for_stmt     go to state 22
    if_stmt      go to state 23
    switch_stmt  go to state 24
    break_stmt   go to state 25
    print_stmt   go to state 26


State 95

   23 switch_tail: "case" . "(" expression ")" stmt

    "("  shift, and go to state 102


State 96

   22 switch_stmt: "switch" "(" expression ")" switch_tail .

    $default  reduce using rule 22 (switch_stmt)


State 97

   26 print_stmt: "(" "strings" "," "id" ")" . ";"

    ";"  shift, and go to state 103


State 98

   28 function_declaration: "function" "id" "(" parameter_list ")" function_body "return" . "digit" "end function"

    "digit"  shift, and go to state 104


State 99

   40 expression: expression "=" "{" parameter_list "}" .

    $default  reduce using rule 40 (expression)


State 100

   17 for_stmt: "for" "id" ":" "=" "num" "to" . "num" "step" "num" expression "endfor"

    "num"  shift, and go to state 105


State 101

   18 if_stmt: "if" "(" expression ")" "then" stmt . if_tail

    "elseif"  shift, and go to state 106
    "else"    shift, and go to state 107

    $default  reduce using rule 21 (if_tail)

    if_tail  go to state 108


State 102

   23 switch_tail: "case" "(" . expression ")" stmt

    "integer"  shift, and go to state 30
    "id"       shift, and go to state 31

    expression  go to state 109
    data_type   go to state 34


State 103

   26 print_stmt: "(" "strings" "," "id" ")" ";" .

    $default  reduce using rule 26 (print_stmt)


State 104

   28 function_declaration: "function" "id" "(" parameter_list ")" function_body "return" "digit" . "end function"

    "end function"  shift, and go to state 110


State 105

   17 for_stmt: "for" "id" ":" "=" "num" "to" "num" . "step" "num" expression "endfor"

    "step"  shift, and go to state 111


State 106

   19 if_tail: "elseif" . stmt

    "while"   shift, and go to state 12
    "for"     shift, and go to state 13
    "if"      shift, and go to state 14
    "switch"  shift, and go to state 15
    "break"   shift, and go to state 16
    "id"      shift, and go to state 17
    "("       shift, and go to state 18

    stmt         go to state 112
    assign_stmt  go to state 20
    while_stmt   go to state 21
    for_stmt     go to state 22
    if_stmt      go to state 23
    switch_stmt  go to state 24
    break_stmt   go to state 25
    print_stmt   go to state 26


State 107

   20 if_tail: "else" . stmt

    "while"   shift, and go to state 12
    "for"     shift, and go to state 13
    "if"      shift, and go to state 14
    "switch"  shift, and go to state 15
    "break"   shift, and go to state 16
    "id"      shift, and go to state 17
    "("       shift, and go to state 18

    stmt         go to state 113
    assign_stmt  go to state 20
    while_stmt   go to state 21
    for_stmt     go to state 22
    if_stmt      go to state 23
    switch_stmt  go to state 24
    break_stmt   go to state 25
    print_stmt   go to state 26


State 108

   18 if_stmt: "if" "(" expression ")" "then" stmt if_tail .

    $default  reduce using rule 18 (if_stmt)


State 109

   23 switch_tail: "case" "(" expression . ")" stmt
   38 expression: expression . "=" number
   39           | expression . "," "id"
   40           | expression . "=" "{" parameter_list "}"
   41           | expression . "||" expression
   42           | expression . "&&" expression
   43           | expression . "== or !=" expression
   44           | expression . "> or < or >= or <=" expression
   45           | expression . "+ or -" expression
   46           | expression . "* or / or ^" expression

    "||"                  shift, and go to state 50
    "&&"                  shift, and go to state 51
    "== or !="            shift, and go to state 52
    "> or < or >= or <="  shift, and go to state 53
    "+ or -"              shift, and go to state 54
    "* or / or ^"         shift, and go to state 55
    ")"                   shift, and go to state 114
    ","                   shift, and go to state 56
    "="                   shift, and go to state 57


State 110

   28 function_declaration: "function" "id" "(" parameter_list ")" function_body "return" "digit" "end function" .

    $default  reduce using rule 28 (function_declaration)


State 111

   17 for_stmt: "for" "id" ":" "=" "num" "to" "num" "step" . "num" expression "endfor"

    "num"  shift, and go to state 115


State 112

   19 if_tail: "elseif" stmt .

    $default  reduce using rule 19 (if_tail)


State 113

   20 if_tail: "else" stmt .

    $default  reduce using rule 20 (if_tail)


State 114

   23 switch_tail: "case" "(" expression ")" . stmt

    "while"   shift, and go to state 12
    "for"     shift, and go to state 13
    "if"      shift, and go to state 14
    "switch"  shift, and go to state 15
    "break"   shift, and go to state 16
    "id"      shift, and go to state 17
    "("       shift, and go to state 18

    stmt         go to state 116
    assign_stmt  go to state 20
    while_stmt   go to state 21
    for_stmt     go to state 22
    if_stmt      go to state 23
    switch_stmt  go to state 24
    break_stmt   go to state 25
    print_stmt   go to state 26


State 115

   17 for_stmt: "for" "id" ":" "=" "num" "to" "num" "step" "num" . expression "endfor"

    "integer"  shift, and go to state 30
    "id"       shift, and go to state 31

    expression  go to state 117
    data_type   go to state 34


State 116

   23 switch_tail: "case" "(" expression ")" stmt .

    $default  reduce using rule 23 (switch_tail)


State 117

   17 for_stmt: "for" "id" ":" "=" "num" "to" "num" "step" "num" expression . "endfor"
   38 expression: expression . "=" number
   39           | expression . "," "id"
   40           | expression . "=" "{" parameter_list "}"
   41           | expression . "||" expression
   42           | expression . "&&" expression
   43           | expression . "== or !=" expression
   44           | expression . "> or < or >= or <=" expression
   45           | expression . "+ or -" expression
   46           | expression . "* or / or ^" expression

    "endfor"              shift, and go to state 118
    "||"                  shift, and go to state 50
    "&&"                  shift, and go to state 51
    "== or !="            shift, and go to state 52
    "> or < or >= or <="  shift, and go to state 53
    "+ or -"              shift, and go to state 54
    "* or / or ^"         shift, and go to state 55
    ","                   shift, and go to state 56
    "="                   shift, and go to state 57


State 118

   17 for_stmt: "for" "id" ":" "=" "num" "to" "num" "step" "num" expression "endfor" .

    $default  reduce using rule 17 (for_stmt)
